# ComfyUI-I2V-Adapter

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
doc/: i2v_adapter_base_workflow.json  i2v_adapter_motion_workflow.json
i2v_adapter/utils/: convert_lora_safetensor_to_diffusers.py  util.py
web/js/: previewVideo.js
