[project]
name = "comfyui-i2v-adapter"
description = "a comfyui custom node for [a/I2V-Adapter](https://github.com/KwaiVGI/I2V-Adapter)"
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers", "transformers", "imageio", "decord", "gdown", "einops", "omegaconf", "safetensors", "wandb"]

[project.urls]
Repository = "https://github.com/AIFSH/ComfyUI-I2V-Adapter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-I2V-Adapter"
Icon = ""
